# dbt-ml

./: .gitignore  CLAUDE.md  README.md  docbt-core-implementation-plan.md
dbt-ml/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
dbt-ml/docs/: classic-ml.md
dbt-ml/examples/arxiv_papers/: README.md  dbt_ml_project.yml  profiles.yml
dbt-ml/examples/blog_pipeline/: dbt_ml_project.yml  profiles.yml
dbt-ml/examples/classic_text_ml/: README.md  dbt_ml_project.yml  profiles.yml
dbt-ml/examples/dbt_consumer/: README.md  dbt_project.yml  profiles.yml  pyproject.toml
dbt-ml/examples/invoice_pipeline/: dbt_ml_project.yml  profiles.yml
dbt-ml/examples/llm_invoice_pipeline/: dbt_ml_project.yml  profiles.yml
dbt-ml/examples/pdf_invoice_pipeline/: README.md  profiles.yml
dbt-ml/examples/support_tickets_pipeline/: dbt_ml_project.yml  profiles.yml
dbt-ml/scripts/: benchmark.py
dbt-ml/src/dbt_ml/: classic_ml.py  cli.py  dag.py  dbt_export.py  docs.py  freshness.py  manifest.py  profile.py  runner.py  versioning.py
dbt-ml/tests/: conftest.py  test_adapters.py  test_arxiv_example.py  test_backends.py  test_checks.py  test_cli_init_show.py  test_config.py  test_custom_python_tests.py  test_dag.py  test_dbt_export.py  test_docs.py  test_email_backend.py  test_freshness.py  test_html_backend.py  test_identifier_quoting.py  test_llm_backend.py  test_manifest.py  test_markdown_backend.py  test_pdf_backend.py  test_pdf_pipeline.py  test_pii.py  test_profile.py  test_quality_checks.py  test_runner.py  test_synth.py  test_text.py  test_text_transforms.py  test_versioning.py
docbt/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docbt/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docbt/.github/workflows/: ci.yml
docbt/examples/blog_pipeline/: profiles.yml
docbt/examples/dbt_consumer/: .gitignore  README.md  profiles.yml  pyproject.toml
docbt/examples/invoice_pipeline/: profiles.yml
docbt/examples/llm_invoice_pipeline/: profiles.yml
docbt/examples/pdf_invoice_pipeline/: README.md  docbt_project.yml  profiles.yml
docbt/scripts/: benchmark.py
docbt/src/docbt/: cli.py  dag.py  docs.py  (+7 more)
docbt/tests/: test_adapters.py  test_backends.py  test_checks.py  test_cli_init_show.py  test_config.py  test_custom_python_tests.py  test_dag.py  test_dbt_export.py  test_dbt_fusion.py  test_dbt_manifest.py  test_docs.py  test_email_backend.py  test_freshness.py  test_html_backend.py  test_llm_backend.py  test_manifest.py  test_markdown_backend.py  test_pdf_backend.py  test_pdf_pipeline.py  test_pii.py  test_profile.py  test_runner.py  test_state.py  test_synth.py  test_text.py  test_text_transforms.py  test_versioning.py
(+146 files in other folders)
