[project]
name = "dbt-ml"
version = "0.2.7"
description = "dbt for unstructured data — declarative pipelines for documents, text, and ML preprocessing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.7",
    "pyyaml>=6",
    "duckdb>=1.0",
    "polars>=1.0",
    "pyarrow>=16",
    "faker>=25",
    "anthropic>=0.40",
    "pypdf>=6.13.0",
    "fpdf2>=2.7",
    "beautifulsoup4>=4.12",
    "watchfiles>=0.21",
    "jinja2>=3.1",
    "tiktoken>=0.7",
    "ftfy>=6.2",
    "langdetect>=1.0",
    "datasketch>=1.6",
    "cryptography>=48.0.1",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]

[project.scripts]
dbt-ml = "dbt_ml.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_ml"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "types-pyyaml",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# Legitimate Unicode (right single quote, em dash, smart quotes) in docstrings,
# tests, and examples isn't a typo — we deliberately use it for mojibake demos.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src/dbt_ml"]

[[tool.mypy.overrides]]
module = ["datasketch", "langdetect"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
