[project]
name = "docbt"
version = "0.1.0"
description = "dbt for unstructured data — v1 proof of concept"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.7",
    "pyyaml>=6",
    "duckdb>=1.0",
    "polars>=1.0",
    "pyarrow>=16",
    "faker>=25",
    "anthropic>=0.40",
    "pypdf>=4.0",
    "fpdf2>=2.7",
    "beautifulsoup4>=4.12",
    "watchfiles>=0.21",
    "jinja2>=3.1",
]

[project.scripts]
docbt = "docbt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docbt"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src/docbt", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
